--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # Site settings
-baseURL = "http://example.org/"
+baseURL = "https://julien-canestrier.netlify.app/"
 languageCode = "en-us"
 title = "Julien Canestrier"
 theme = "forty"
