Several links and homepage

--- a/config.toml
+++ b/config.toml
@@ -38,7 +38,7 @@ disqusShortname = ""
   # Navigation Section
   [params.navigation]
     title = "Julien Canestrier"
-    #subtitle = "Data Analytics for Finance"
+    subtitle = "Portfolio"
     menu = "Menu"
     # Optional logo as brand stored in img/
     logo = "logo.png"
@@ -101,13 +101,13 @@ disqusShortname = ""
       title = "What I Read"
       subtitle = "Feugiat Amet Tempus"
       image = "pic02.jpg"
-      url = "blogs/tempus"
+      url = "whatiread"
 
     [[params.tiles.showcase]]
       title = "Project 1"
       subtitle = "Lorem Etiam Nullam"
       image = "pic03.jpg"
-      url = "blogs/magna"
+      url = "projects/project1"
 
     [[params.tiles.showcase]]
       title = "Project 2"
@@ -138,14 +138,13 @@ disqusShortname = ""
   # Section Type Two
   [params.two]
     enable = true
-    title = "Massa libero"
-    subtitle = """Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. 
-    Mauris aliquet magna magna sed nunc rhoncus pharetra. 
-    Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. 
-    Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero.
-    Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus."""
+    title = "Welcome to my website"
+    subtitle = """Thank you for visiting my portfolio website. 
+    This website was created during my Data Analytics for Finance course at London Business School.
+    I will continue to update this website with a brief summary of myself, the books I have enjoyed reading, and any internal projects I have worked on. 
+    Feel free to explore this website and please do not hesitate to contact me if you have any questions or want to spark a conversation!"""
     buttonText = "Get Started"
-    url = "blogs"
+    url = "aboutme"
 
 
   # Contact section
@@ -172,50 +171,49 @@ disqusShortname = ""
     # by copying the corresponding map with frontmatter code.
     [[params.contact.email]]
     title = "Email"
-    email = "example@domain.com"
+    email = "juliencanestrier98@gmail.com"
 
     [[params.contact.phone]]
     title = "Phone"
-    phone = "(000) 000-0000 x1234"
-
+    phone = "+44(0) 7730 708670"
     [[params.contact.address]]
-    title = "Address"
-    street = "Street"
-    city = "City, ST 00000"
-    country = "Country"
+    #title = "Address"
+    #street = "Street"
+    city = "London"
+    country = "United Kingdom"
 
   # Footer section
   [params.footer]
     enable = true
-    copyright = "Company Name"
+    copyright = "London Business School"
 
     # Uses font awesome icons
-    [[params.footer.social]]
-      icon = "fa-twitter"
-      url= "https://www.twitter.com"
-      label = "Twitter"
+    #[[params.footer.social]]
+     # icon = "fa-twitter"
+      #url= "https://www.twitter.com"
+      #label = "Twitter"
 
-    [[params.footer.social]]
-      icon = "fa-facebook"
-      url= "https://www.facebook.com"
-      label = "Facebook"
+    #[[params.footer.social]]
+    #  icon = "fa-facebook"
+     # url= "https://www.facebook.com"
+      #label = "Facebook"
 
     [[params.footer.social]]
       icon = "fa-instagram"
-      url= "https://www.instagram.com"
+      url= "https://www.instagram.com/jcanestrier/?hl=en"
       label = "Instagram"
     
     [[params.footer.social]]
       icon = "fa-github"
-      url= "https://www.github.com"
+      url= "https://github.com/JCanestrier"
       label = "GitHub"
 
     [[params.footer.social]]
       icon = "fa-linkedin"
-      url= "https://www.linkedin.com"
+      url= "https://www.linkedin.com/in/julien-canestrier/"
       label = "LinkedIn"
 
     [[params.footer.quicklinks]]
-      text = "Design: "
-      url= "https://www.html5up.net"
-      alt = "HTML5 UP"
+      text = "Special thanks to"
+      url= "https://www.london.edu/faculty-and-research/faculty-profiles/k/kostis-christodoulou"
+      alt = "Kostis Christodoulou"
