--- a/config.toml
+++ b/config.toml
@@ -41,7 +41,7 @@ disqusShortname = ""
     subtitle = "Portfolio"
     menu = "Menu"
     # Optional logo as brand stored in img/
-    logo = "logo.png"
+    #logo = "logo.png"
 
     [[params.navigation.links]]
       name = "Home"
@@ -148,7 +148,7 @@ disqusShortname = ""
 
 
   # Contact section
-  #[params.contact]
+  [params.contact]
    # enable = true
     #buttonSend = "Send message"
     #buttonClear = "Clear"
