--- a/config.toml
+++ b/config.toml
@@ -99,33 +99,33 @@ disqusShortname = ""
 
     [[params.tiles.showcase]]
       title = "What I Read"
-      subtitle = "Feugiat Amet Tempus"
+      #subtitle = "Feugiat Amet Tempus"
       image = "pic02.jpg"
       url = "whatiread"
 
     [[params.tiles.showcase]]
       title = "Project 1"
-      subtitle = "Lorem Etiam Nullam"
+      #subtitle = "Lorem Etiam Nullam"
       image = "pic03.jpg"
-      url = "projects/project1"
+      url = "projects/teamcollab"
 
     [[params.tiles.showcase]]
       title = "Project 2"
       subtitle = "Nisl Sed Aliquam"
       image = "pic04.jpg"
-      url = "blogs/ipsum"
+      url = "blogs/thesis"
 
     [[params.tiles.showcase]]
       title = "Project 3"
       subtitle = "Ipsum Dolor Sit Amet"
       image = "pic05.jpg"
-      url = "blogs/ipsum"
+      url = "blogs/tflbikes"
 
     [[params.tiles.showcase]]
       title = "Project 4"
       subtitle = "Feugiat Amet Tempus"
       image = "pic06.jpg"
-      url = "blogs/ipsum"
+      url = "blogs/IMDB"
     # You can make more showcases by copy and pasting the code above
 
   [params.blog]
