--- a/config.toml
+++ b/config.toml
@@ -104,28 +104,28 @@ disqusShortname = ""
       url = "whatiread"
 
     [[params.tiles.showcase]]
-      title = "Project 1"
+      title = "Digital Team Collaboration"
       #subtitle = "Lorem Etiam Nullam"
       image = "pic03.jpg"
       url = "projects/teamcollab"
 
     [[params.tiles.showcase]]
-      title = "Project 2"
-      subtitle = "Nisl Sed Aliquam"
+      title = "CEO Compensation Research"
+      #subtitle = "Nisl Sed Aliquam"
       image = "pic04.jpg"
-      url = "blogs/thesis"
+      url = "projects/thesis"
 
     [[params.tiles.showcase]]
-      title = "Project 3"
-      subtitle = "Ipsum Dolor Sit Amet"
+      title = "Tfl Bikes Data Analysis"
+      #subtitle = "Ipsum Dolor Sit Amet"
       image = "pic05.jpg"
-      url = "blogs/tflbikes"
+      url = "projects/tflbikes"
 
     [[params.tiles.showcase]]
-      title = "Project 4"
-      subtitle = "Feugiat Amet Tempus"
+      title = "IMDb Ratings Data Analysis"
+      #subtitle = "Feugiat Amet Tempus"
       image = "pic06.jpg"
-      url = "blogs/IMDB"
+      url = "projects/IMDB"
     # You can make more showcases by copy and pasting the code above
 
   [params.blog]
