--- a/config.toml
+++ b/config.toml
@@ -53,7 +53,7 @@ disqusShortname = ""
 
     [[params.navigation.links]]
       name = "What I Read"
-      url = "whatiread"
+      url = "whatiread/whatiread"
 
     [[params.navigation.links]]
       name = "Projects"
@@ -101,7 +101,7 @@ disqusShortname = ""
       title = "What I Read"
       subtitle = "Interesting Literature"
       image = "reading.jpg"
-      url = "whatiread"
+      url = "whatiread/whatiread"
 
     [[params.tiles.showcase]]
       title = "Digital Team Collaboration"
@@ -125,7 +125,7 @@ disqusShortname = ""
       title = "IMDb Ratings"
       subtitle = "Movie Data Analysis"
       image = "movies1.jpg"
-      url = "projects/IMDB"
+      url = "projects/imdb"
     # You can make more showcases by copy and pasting the code above
 
   [params.blog]
@@ -144,7 +144,7 @@ disqusShortname = ""
     I will continue to update this website with a brief summary of myself, the books I have enjoyed reading, and any internal projects I have worked on. 
     Feel free to explore this website and please do not hesitate to contact me if you have any questions or if you simply want to spark a conversation!"""
     buttonText = "Get Started"
-    url = "aboutme"
+    url = "aboutme/aboutme"
 
 
   # Contact section
